src/desugar/snapshots/transmute__desugar__implicit_ret__tests__implicit_return_if.snap
---
source: src/desugar/implicit_ret.rs
expression: "AstNodePrettyPrint::new(&ast, *ast.statements().first().unwrap()).to_string()"
---
let f(): number = {
  if c {
    42;
  }
  ret 43;
}

